test/functions/export/export-array-out.chpl


export proc badFormalIntentOut(out s: [] int) {}

